<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_add_movie"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_movie" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edtUpdateMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_name"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edtUpdateMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_title"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edtUpdateMovieDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_description"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUpdateMyMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:background="@drawable/bg_item_movie"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/update_my_movie"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>